// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminDashboard /> renders basic render 1`] = `
<article
  id="admin-dashboard-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12"
    />
    <div
      className="row no-gutters"
    >
      <section
        className="col-xs-12 hide-aside manage-actions"
      >
        <nav>
          <ul />
        </nav>
      </section>
    </div>
  </div>
</article>
`;

exports[`<AdminDashboard /> renders render with 2 cards 1`] = `
<article
  id="admin-dashboard-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12"
    />
    <div
      className="row no-gutters"
    >
      <section
        className="col-xs-12 hide-aside manage-actions"
      >
        <nav>
          <ul>
            <li
              className="col-xs-12"
            />
            <li
              className="col-xs-12"
            >
              <a
                className="dashboard-card manage-apps has-shadow"
                href="/admin/manage-apps"
                onClick={[Function]}
              >
                <div
                  className="desc"
                >
                  <h3
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Manage apps",
                      }
                    }
                  />
                  <p
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Push an app to your Mobile Device Management(MDM) solution, recommend apps, block apps",
                      }
                    }
                  />
                </div>
                <span>
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Manage apps",
                      }
                    }
                  />
                   
                  <i
                    aria-hidden="true"
                    className="icon-arrowRight"
                  />
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </section>
    </div>
  </div>
</article>
`;

exports[`<AdminDashboard /> renders render with 3 cards 1`] = `
<article
  id="admin-dashboard-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12"
    />
    <div
      className="row no-gutters"
    >
      <section
        className="col-xs-12 hide-aside manage-actions"
      >
        <nav>
          <ul>
            <li
              className="col-xs-12"
            >
              <a
                className="dashboard-card manage-apps has-shadow"
                href="/admin/manage-apps"
                onClick={[Function]}
              >
                <div
                  className="desc"
                >
                  <h3
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Manage apps",
                      }
                    }
                  />
                  <p
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Push an app to your Mobile Device Management(MDM) solution, recommend apps, block apps",
                      }
                    }
                  />
                </div>
                <span>
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Manage apps",
                      }
                    }
                  />
                   
                  <i
                    aria-hidden="true"
                    className="icon-arrowRight"
                  />
                </span>
              </a>
            </li>
            <li
              className="col-xs-12"
            />
            <li
              className="col-xs-12"
            />
          </ul>
        </nav>
      </section>
    </div>
  </div>
</article>
`;

exports[`<AdminDashboard /> renders render with 4 cards 1`] = `
<article
  id="admin-dashboard-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12"
    />
    <div
      className="row no-gutters"
    >
      <section
        className="col-xs-12 hide-aside manage-actions"
      >
        <nav>
          <ul>
            <li
              className="col-xs-12"
            >
              <a
                className="dashboard-card manage-apps has-shadow"
                href="/admin/manage-apps"
                onClick={[Function]}
              >
                <div
                  className="desc"
                >
                  <h3
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Manage apps",
                      }
                    }
                  />
                  <p
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Push an app to your Mobile Device Management(MDM) solution, recommend apps, block apps",
                      }
                    }
                  />
                </div>
                <span>
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Manage apps",
                      }
                    }
                  />
                   
                  <i
                    aria-hidden="true"
                    className="icon-arrowRight"
                  />
                </span>
              </a>
            </li>
            <li
              className="col-xs-12"
            />
            <li
              className="col-xs-12"
            />
            <li
              className="col-xs-12"
            />
          </ul>
        </nav>
      </section>
    </div>
  </div>
</article>
`;

exports[`<AdminDashboard /> renders render with 5 cards 1`] = `
<article
  id="admin-dashboard-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12"
    />
    <div
      className="row no-gutters"
    >
      <section
        className="col-xs-12 hide-aside manage-actions"
      >
        <nav>
          <ul>
            <li
              className="col-xs-12"
            />
            <li
              className="col-xs-12"
            >
              <a
                className="dashboard-card manage-apps has-shadow"
                href="/admin/manage-apps"
                onClick={[Function]}
              >
                <div
                  className="desc"
                >
                  <h3
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Manage apps",
                      }
                    }
                  />
                  <p
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Push an app to your Mobile Device Management(MDM) solution, recommend apps, block apps",
                      }
                    }
                  />
                </div>
                <span>
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Manage apps",
                      }
                    }
                  />
                   
                  <i
                    aria-hidden="true"
                    className="icon-arrowRight"
                  />
                </span>
              </a>
            </li>
            <li
              className="col-xs-12"
            />
            <li
              className="col-xs-12"
            />
            <li
              className="col-xs-12"
            />
          </ul>
        </nav>
      </section>
    </div>
  </div>
</article>
`;

exports[`<AdminDashboard /> renders render with aside 1`] = `
<article
  id="admin-dashboard-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12"
    />
    <div
      className="row no-gutters"
    >
      <section
        className="col-xs-12 col-lg-8 manage-actions"
      >
        <div
          className="col-xs-12"
        >
          <h2
            className="as-h4"
          >
            Management
          </h2>
        </div>
        <nav>
          <ul />
        </nav>
      </section>
      <aside
        className="col-xs-12 col-lg-4 shop-actions"
      >
        <div
          className="col-xs-12"
        >
          <h2
            className="as-h4"
          >
            Purchasing & Provisioning
          </h2>
        </div>
        <nav>
          <ul>
            <li
              className="col-xs-12"
            />
            <li
              className="col-xs-12"
            >
              <a
                className="dashboard-card shop-specialized-devices has-shadow"
                href="/admin/devices"
                onClick={[Function]}
              >
                <div
                  className="desc"
                >
                  <h3
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Shop specialized devices",
                      }
                    }
                  />
                  <p
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Purchase ruggedized devices, vehicle routers, etc.",
                      }
                    }
                  />
                </div>
                <span>
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Shop specialized devices",
                      }
                    }
                  />
                   
                  <i
                    aria-hidden="true"
                    className="icon-arrowRight"
                  />
                </span>
              </a>
            </li>
            <li
              className="col-xs-12"
            >
              <a
                className="dashboard-card shop-solutions has-shadow"
                href="/admin/solutions"
                onClick={[Function]}
              >
                <div
                  className="desc"
                >
                  <h3
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Shop public safety solutions",
                      }
                    }
                  />
                  <p
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Browse public safety solutions and choose which are best for your organization",
                      }
                    }
                  />
                </div>
                <span>
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Shop public safety solutions",
                      }
                    }
                  />
                   
                  <i
                    aria-hidden="true"
                    className="icon-arrowRight"
                  />
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </aside>
    </div>
  </div>
</article>
`;
